--- a/website/docs/.vitepress/theme/styles/prose.css
+++ b/website/docs/.vitepress/theme/styles/prose.css
@@ -4,6 +4,7 @@
   --tw-prose-links: var(--foreground);
   --tw-prose-bold: var(--foreground);
   --tw-prose-code: var(--foreground);
+  --tw-prose-pre-code: var(--foreground);
   --tw-prose-pre-bg: var(--muted);
   --tw-prose-hr: var(--border);
   --tw-prose-th-borders: var(--border);
